--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Organization's list of employees" />
-  <link rel="icon" href="favicon.svg" type="image/svg+xml">
-  <title>eList</title>
+  <link rel="icon" href="database.svg" type="image/svg+xml">
+  <title>EBase</title>
 </head>
 
 <body>
